Update website components and add new features

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CardiaLink</title>
-    <meta name="description" content="Cardialink Quantify Application" />
-    <meta name="author" content="Cardialink" />
+    <meta name="description" content="CardiaLink - AI-Powered Health Risk Assessment & Insurance Profiling" />
+    <meta name="author" content="CardiaLink" />
 
-    <meta property="og:title" content="Cardialink Quantify" />
-    <meta property="og:description" content="Cardialink Quantify Application" />
+    <meta property="og:title" content="CardiaLink" />
+    <meta property="og:description" content="CardiaLink - AI-Powered Health Risk Assessment & Insurance Profiling" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
 
